--- a/app/src/main/res/layout/item_recyclerview.xml
+++ b/app/src/main/res/layout/item_recyclerview.xml
@@ -21,47 +21,41 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/tv_id"
+                android:id="@+id/txt_title"
+                android:textStyle="bold"
                 android:layout_width="fill_parent"
                 android:layout_height="40dp"
                 android:layout_marginLeft="20sp"
                 android:gravity="left|center_vertical"
                 android:textColor="@android:color/black"
-                android:textSize="16dp"
+                android:textSize="20sp"
                 android:typeface="serif" />
 
-            <TextView
-                android:id="@+id/tv_Name"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:weightSum="8">
 
-                android:layout_width="fill_parent"
-                android:layout_height="40dp"
-                android:layout_marginLeft="20sp"
-                android:gravity="center_vertical|left"
-                android:textColor="@android:color/black"
-                android:textSize="16dp"
-                android:typeface="serif" />
+                <ImageView
+                    android:id="@+id/image_title"
+                    android:layout_width="0dp"
+                    android:layout_height="150dp"
+                    android:src="@mipmap/ic_launcher"
+                    android:layout_marginLeft="20sp"
+                    android:layout_weight="3"
+                    android:gravity="center_vertical|left"
+                    android:textColor="@android:color/black"
+                    android:textSize="16dp" />
 
-            <TextView
-                android:id="@+id/tv_salary"
+                <TextView
+                    android:id="@+id/txt_detail"
+                    android:layout_width="0dp"
+                    android:layout_height="150dp"
+                    android:layout_weight="5" />
 
-                android:layout_width="fill_parent"
-                android:layout_height="40dp"
-                android:layout_marginLeft="20sp"
-                android:gravity="center_vertical|left"
-                android:textColor="@android:color/black"
-                android:textSize="16dp"
-                android:typeface="serif" />
+            </LinearLayout>
 
-            <TextView
-                android:id="@+id/tv_age"
-
-                android:layout_width="fill_parent"
-                android:layout_height="40dp"
-                android:layout_marginLeft="20sp"
-                android:gravity="center_vertical|left"
-                android:textColor="@android:color/black"
-                android:textSize="16dp"
-                android:typeface="serif" />
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
