--- a/app/src/main/res/layout/item_recyclerview.xml
+++ b/app/src/main/res/layout/item_recyclerview.xml
@@ -9,8 +9,8 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:padding="10dp"
+        android:layout_margin="5dp"
+        android:padding="5dp"
         app:cardCornerRadius="5dp">
 
         <LinearLayout
@@ -40,7 +40,7 @@
                 <ImageView
                     android:id="@+id/image_title"
                     android:layout_width="0dp"
-                    android:layout_height="150dp"
+                    android:layout_height="match_parent"
                     android:src="@mipmap/ic_launcher"
                     android:layout_marginLeft="20sp"
                     android:layout_weight="3"
@@ -51,7 +51,7 @@
                 <TextView
                     android:id="@+id/txt_detail"
                     android:layout_width="0dp"
-                    android:layout_height="150dp"
+                    android:layout_height="match_parent"
                     android:layout_weight="5" />
 
             </LinearLayout>
