--- a/app/src/main/res/layout/item_recyclerview.xml
+++ b/app/src/main/res/layout/item_recyclerview.xml
@@ -1,62 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-
-    android:layout_height="wrap_content"
+    android:layout_height="80dp"
+    android:id="@+id/layout_constraint"
     android:orientation="vertical">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
+    <ImageView
         android:padding="5dp"
-        app:cardCornerRadius="5dp">
+        android:id="@+id/image_View"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="w,1:1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <LinearLayout
-            android:id="@+id/top_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#E0FFF4"
-            android:orientation="vertical">
+    <LinearLayout
+        android:padding="5dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/image_View"
+        app:layout_constraintTop_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-            <TextView
-                android:id="@+id/txt_title"
-                android:textStyle="bold"
-                android:layout_width="fill_parent"
-                android:layout_height="40dp"
-                android:layout_marginLeft="20sp"
-                android:gravity="left|center_vertical"
-                android:textColor="@android:color/black"
-                android:textSize="20sp"
-                android:typeface="serif" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:weightSum="8">
-
-                <ImageView
-                    android:id="@+id/image_title"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:src="@mipmap/ic_launcher"
-                    android:layout_marginLeft="20sp"
-                    android:layout_weight="3"
-                    android:gravity="center_vertical|left"
-                    android:textColor="@android:color/black"
-                    android:textSize="16dp" />
-
-                <TextView
-                    android:id="@+id/txt_detail"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="5" />
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
-</LinearLayout>
+        <TextView
+            android:id="@+id/titleView"
+            android:text="Title"
+            style="@style/Title"
+            />
+        <TextView
+            android:id="@+id/DesView"
+            android:lines="2"
+            android:text="Description"
+            style="@style/Des"
+            />
+    </LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
